Fixed dropdown overlap issue

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -212,6 +212,7 @@
 
       .navigation-dropdown-component {
         position: relative;
+        top: 14px;
       }
     }
     // stylelint-enable max-nesting-depth, selector-max-specificity
